<resources>
    <string name="app_name">IzinBoss</string>
    <string name="btn_login">Login</string>
    <string name="btn_create_new_team">Create New Team</string>
    <string name="btn_join_existing_team">Join Existing Team</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="tv_code">Code</string>
    <!--item_letter-->
    <string name="permit">Surat Izin</string>
    <string name="description">Deskripsi</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="name_manager">Mico Winaryo Dwi Putranto</string>
    <string name="name_staff">Staff Name</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="type_leave">Tipe Surat Izin</string>
    <string name="waktu_izin">Waktu Izin</string>
    <string name="topbar_account">Account</string>
    <string name="status">Pending / Accepted / Rejected</string>
    <string name="tv_sampai_dengan">s/d</string>
    <!--Drop Down Item-->
    <string-array name="item_dropdown">
        <item>Surat Izin</item>
        <item>Surat Sakit</item>
        <item>Surat Cuti</item>
    </string-array>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="acc_position">Position</string>
    <string name="acc_password">Password</string>
    <string name="acc_email">Email</string>
    <string name="acc_nama">Nama</string>
    <string name="msg_name">Mico Winaryo Dwi Putranto</string>
    <string name="msg_email">mikowinaryo11@gmail.com</string>
    <string name="mico_winaryo_dwi_putranto">Mico Winaryo Dwi Putranto</string>
    <string name="msg_staff">staff</string>
    <string name="start_date">Start Date</string>
    <string name="finish_date">Finish Date</string>
    <string name="edit">EDIT</string>
    <string name="close">close</string>
    <string name="sign_out">Sign Out</string>
    <string name="noted">Catatan</string>
    <string name="company_code">Company Code</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
</resources>