<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.manager.home.DetailLetterManagerActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <AutoCompleteTextView
            android:id="@+id/edtTypeLeave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_leave"
            android:padding="20dp"
            android:inputType="none"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:hint="@string/description"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <AutoCompleteTextView
            android:id="@+id/edt_start_datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:hint="@string/start_date"
            android:inputType="none"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <AutoCompleteTextView
            android:id="@+id/edt_end_datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/finish_date"
            android:padding="20dp"
            android:inputType="none"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/noted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/noted"
            android:padding="20dp"
            android:inputType="none"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_approved"
        android:layout_marginTop="20dp"
        style="@style/ButtonGeneral"
        android:backgroundTint="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/approved" />

    <Button
        android:id="@+id/btn_rejected"
        android:layout_marginTop="20dp"
        style="@style/ButtonGeneral"
        android:backgroundTint="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rejected" />

    <Button
        android:id="@+id/btn_close"
        android:layout_marginTop="20dp"
        style="@style/ButtonGeneral"
        android:backgroundTint="@color/white"
        android:textColor="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close" />



</LinearLayout>