<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".FirstActivity">

    <TextView
        android:id="@+id/tv_SplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AplikasiPerizinan Staff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_SignupCompany"
        style="@style/ButtonGeneral"
        android:layout_marginTop="100dp"
        android:text="@string/btn_create_new_team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_SplashScreen"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_SignupUser"
        style="@style/ButtonGeneral"
        android:layout_marginTop="20dp"
        android:text="@string/btn_join_existing_team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_SignupCompany"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_Login"
        style="@style/ButtonGeneral"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_login"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_SignupUser"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>